another overflow fix 2

--- a/css/layout.css
+++ b/css/layout.css
@@ -3183,9 +3183,9 @@ button:hover {
         background:transparent !important;
     }
 
-    body {
+    /*body {
         overflow:hidden;
-    }
+    }*another overflow fix
 
     .light_grey_solid .white-solid {
         display:none;
